force-app/main/default/objects/PPSR_Registration__c/PPSR_Registration__c.object-meta.xml
<CustomObject>
    <label>PPSR Registration</label>
    <nameField>
        <displayFormat>PPSR-{0000}</displayFormat>
        <label>PPSR Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPSR Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>