force-app/main/default/objects/PPSR_Registration__c/fields/Organisation_number__c.field-meta.xml
<CustomField>
    <fullName>Organisation_number__c</fullName>
    <label>Organisation number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>