force-app/main/default/objects/PPSR_Registration__c/fields/Search_Type__c.field-meta.xml
<CustomField>
    <fullName>Search_Type__c</fullName>
    <label>Search Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>