force-app/main/default/objects/PPSR_Registration__c/fields/Total_PMSI_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Total_PMSI_Registrations__c</fullName>
    <label>Total PMSI Registrations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>