force-app/main/default/objects/PPSR_Registration__c/fields/Total_Registrations_Designated_Secured_P__c.field-meta.xml
<CustomField>
    <fullName>Total_Registrations_Designated_Secured_P__c</fullName>
    <label>Total Registrations Designated Secured P</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>