force-app/main/default/objects/PPSR_Registration__c/fields/Total_Registrations_Other_Financier_Secu__c.field-meta.xml
<CustomField>
    <fullName>Total_Registrations_Other_Financier_Secu__c</fullName>
    <label>Total Registrations Other Financier Secu</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>